refactor: compile to global bin directory

--- a/go/Makefile
+++ b/go/Makefile
@@ -1,4 +1,4 @@
-BIN := aoc
+BIN := $(GOPATH)/bin/aoc
 
 build: ## Build the binary
 	go build -o $(BIN) .
@@ -6,10 +6,7 @@ build: ## Build the binary
 clean: ## Remove build artifacts
 	rm $(BIN)
 
-ignore: ## Add the executable file to .gitignore
-	echo $(BIN) > .gitignore
-
 tidy: ## Tidy the module
 	go mod tidy
 
-.PHONY: build clean ignore tidy help
+.PHONY: build clean tidy help
