feat(c): year2015 sol04
C is tedious lol! I don't know if I will be able to complete it with
the current state of my knowledge and also considering the amount of
time I've to spend in getting simple things done in C.

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,5 +1,6 @@
 CC := clang
-CFLAGS += -Wall -Wextra -Werror
+CFLAGS += -Wall -Wextra
+LDFLAGS += -lssl -lcrypto
 BIN = aoc
 
 # No optimizations when debugging
@@ -14,7 +15,7 @@ OBJECTS = $(SRC:.c=.o)
 HEADERS = $(shell find . -type f -name "*.h")
 
 $(BIN): $(OBJECTS)
-	$(CC) -o $@ $^
+	$(CC) $(LDFLAGS) -o $@ $^
 
 $(OBJECTS): %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
