feat(c): year2015 sol12
JSON parsing in C!

Library used: https://github.com/DaveGamble/cJSON

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,6 +1,6 @@
 CC := clang
 CFLAGS += -Wall -Wextra -Wpedantic
-LDFLAGS += -lssl -lcrypto
+LDFLAGS += -lssl -lcrypto -lcjson
 BIN = aoc
 
 # No optimizations when debugging
