--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,7 @@
-[package]
-name = "aoc"
+[workspace]
+members = ["crates/*"]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
