--- a/rust/crates/aoc_cli/Cargo.toml
+++ b/rust/crates/aoc_cli/Cargo.toml
@@ -12,3 +12,6 @@ chrono = "0.4.31"
 clap = { version = "4.4.10", features = ["derive"] }
 
 year2023 = { path = "../year2023" }
+
+[lints]
+workspace = true
