--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,5 @@ pedantic = { level = "warn" }
 # Allowed pedantic rules
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
+module_name_repetitions = "allow"
+must_use_candidate = "allow"
