--- a/rust/crates/year2023/Cargo.toml
+++ b/rust/crates/year2023/Cargo.toml
@@ -6,10 +6,12 @@ edition = { workspace = true }
 [lib]
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = { workspace = true }
 num-integer = "0.1.45"
+itertools = { workspace = true }
 
 aoc_lib = { path = "../aoc_lib" }
+aoc_traits = { path = "../aoc_traits" }
 
 [dev-dependencies]
 test-case = "3.3.1"
