--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2021"
 
 [workspace.dependencies]
 anyhow = "1.0.75"
+chrono = "0.4.31"
+clap = { version = "4.4.10", features = ["derive"] }
 itertools = "0.12.0"
+test-case = "3.3.1"
 
 [workspace.lints.clippy]
-pedantic = { level = "warn" }
+pedantic = { level = "warn", priority = -1 }
 # Allowed pedantic rules
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
