--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,9 @@ anyhow = "1.0.75"
 chrono = "0.4.31"
 clap = { version = "4.4.10", features = ["derive"] }
 itertools = "0.12.0"
+shellexpand = "3.1.0"
 test-case = "3.3.1"
+ureq = "2.12.0"
 
 [workspace.lints.clippy]
 pedantic = { level = "warn", priority = -1 }
