--- a/rust/crates/year2024/Cargo.toml
+++ b/rust/crates/year2024/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+itertools = { workspace = true }
 
 aoc_lib = { path = "../aoc_lib" }
 
