--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 anyhow = "1.0.75"
 chrono = "0.4.31"
 clap = { version = "4.4.10", features = ["derive"] }
+image = "0.25.5"
 itertools = "0.12.0"
 shellexpand = "3.1.0"
 test-case = "3.3.1"
