--- a/rust/crates/year2024/Cargo.toml
+++ b/rust/crates/year2024/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 anyhow = { workspace = true }
 itertools = { workspace = true }
+image = { workspace = true }
 
 aoc_lib = { path = "../aoc_lib" }
 
