--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,6 +14,7 @@ image = "0.25.5"
 itertools = "0.12.0"
 shellexpand = "3.1.0"
 test-case = "3.3.1"
+thiserror = "2.0.11"
 ureq = "2.12.0"
 
 [workspace.lints.clippy]
