--- a/rust/crates/aoc_lib/Cargo.toml
+++ b/rust/crates/aoc_lib/Cargo.toml
@@ -4,6 +4,7 @@ version = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
+thiserror = { workspace = true }
 
 [lints]
 workspace = true
