--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,6 +12,8 @@ chrono = "0.4.31"
 clap = { version = "4.4.10", features = ["derive"] }
 image = "0.25.5"
 itertools = "0.12.0"
+# nalgebra = "0.33.2"
+num-integer = "0.1.45"
 shellexpand = "3.1.0"
 test-case = "3.3.1"
 thiserror = "2.0.11"
