--- a/rust/crates/year2023/Cargo.toml
+++ b/rust/crates/year2023/Cargo.toml
@@ -7,7 +7,7 @@ edition = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-num-integer = "0.1.45"
+num-integer = { workspace = true }
 itertools = { workspace = true }
 
 aoc_lib = { path = "../aoc_lib" }
